kubernetes/apps/network/envoy-gateway/templates/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: envoy-internal
  annotations:
    external-dns.alpha.kubernetes.io/target: "internal.ad.pospiech.dev"
spec:
  gatewayClassName: envoy
  infrastructure:
    annotations:
      external-dns.alpha.kubernetes.io/hostname: "internal.ad.pospiech.dev"
      lbipam.cilium.io/ips: "10.2.128.239"
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Same
    # - name: https
    #   protocol: HTTPS
    #   port: 443
    #   allowedRoutes:
    #     namespaces:
    #       from: All
    #   tls:
    #     certificateRefs:
    #       - group: ""
    #         kind: Secret
    #         name: root-domain-tls
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: envoy-external
  annotations:
    external-dns.alpha.kubernetes.io/target: "external.ad.pospiech.dev"
spec:
  gatewayClassName: envoy
  infrastructure:
    annotations:
      external-dns.alpha.kubernetes.io/hostname: "external.ad.pospiech.dev"
      lbipam.cilium.io/ips: "10.2.128.238"
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Same
    # - name: https
    #   protocol: HTTPS
    #   port: 443
    #   allowedRoutes:
    #     namespaces:
    #       from: All
    #   tls:
    #     certificateRefs:
    #       - group: ""
    #         kind: Secret
    #         name: root-domain-tls
